FileSelector UI with underlying browse uploads / icons modals updated

--- a/IconSelector/IconSelect.scss
+++ b/IconSelector/IconSelect.scss
@@ -7,21 +7,85 @@
 
     .icon-container {
         overflow-y:auto;
+        display: flex;
+        flex-wrap: wrap;
+        gap: 8px;
     }
 
     .icon-select-modal {
+
+        .modal-body {
+            overflow: hidden;
+            display: flex;
+            flex-direction: column;
+        }
+
         .icon-tile {
-            border: 1px solid lightgrey;
-            border-radius: 4px;
-            text-align: center;
-            padding: 20px;
-    
-            &:hover {
-                cursor: pointer;
+            width: 100%;
+            height: 100%;
+            flex: 0 0 116px;
+            border-radius: 0;
+            padding: 0;
+            margin-bottom: 8px;
+
+            &__preview {
+                width: 100%;
+                aspect-ratio: 1/1;
+                border: 1px solid #eee;
+                border-radius: 3px;
+                overflow: hidden;
+                margin-bottom: 4px;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                position: relative;
+            }
+
+            &__style {
+                position: absolute;
+                top: 4px;
+                right: 4px;
+                font-size: 10px;
+                border-radius: 3px;
+                padding: 3px 5px;
+                text-transform: uppercase;
+                background: #aaa;
+                color: #fff;
+
+                &--regular {
+                    background: var(--primary);
+                    color: var(--primary-fg);
+                }
+
+                &--solid {
+                    background: var(--secondary);
+                    color: var(--secondary-fg);
+                }
+
+                &--brands {
+                    background: var(--info);
+                    color: var(--info-fg);
+                }
+
+            }
+
+            &__name {
+		        font-size: 12px;
+		        word-break: break-all;
+		        overflow: hidden;
+		        text-overflow: ellipsis;
+		        display: -webkit-box;
+		        line-clamp: 1;
+		        -webkit-line-clamp: 1;
+		        -webkit-box-orient: vertical;
             }
     
-            .fab, .far, .fas {
-                font-size: 30px;
+            &:hover {
+                //cursor: pointer;
+            }
+    
+            .fab, .far, .fas, .fal, .fad, .fr {
+                font-size: 32px;
             }
         }
     }
