--- a/file-selector.scss
+++ b/file-selector.scss
@@ -1,5 +1,112 @@
-.file-selector{
+.file-selector {
+    margin-bottom: 2rem;
+
+	&__grid {
+		display: flex;
+		flex-wrap: wrap;
+		gap: 8px;
+		list-style: none;
+		padding: 0;
+		margin: 0;
+		flex: 1 1 auto;
+		min-height: 0;
+		overflow-y: auto;
+
+		> .loop-item {
+			flex: 0 0 200px;
+		}
+
+		+ .paginator {
+			flex: 0 0 auto;
+			padding-top: 8px;
+
+			> .pagination {
+				justify-content: center;
+			}
+		}
+	}
+
+	&__item {
+		padding: 0;
+		width: 100%;
+		height: 100%;
+		margin-bottom: 8px;
+		border-radius: 0;
+
+		img {
+			width: 100%;
+			height: 100%;
+			object-fit: cover;
+		}
+	}
+
+	&__preview {
+		width: 100%;
+		aspect-ratio: 1 / 1;
+		border: 1px solid #eee;
+		border-radius: 3px;
+		overflow: hidden;
+		margin-bottom: 4px;
+		display: flex;
+		align-items: center;
+		justify-content: center;
+
+		.image > * {
+			width: 100%;
+		}
+	}
+
+	&__name {
+		font-size: 12px;
+		word-break: break-all;
+		overflow: hidden;
+		text-overflow: ellipsis;
+		display: -webkit-box;
+		line-clamp: 1;
+		-webkit-line-clamp: 1;
+		-webkit-box-orient: vertical;
+	}
+
+	&__options {
+		display: flex;
+		margin-top: .75rem;
+	}
+
+	&__select {
+		margin-right: .5rem;
+
+		&.dropdown > .btn {
+			background-image: none !important;
+			background: var(--primary);
+			color: var(--primary-fg);
+
+			&:hover {
+				background: var(--primary-hover);
+			}
+		}
+
+	}
+
+	&__link {
+		margin-right: .5rem;
+		background-image: none !important;
+		background: var(--primary);
+		color: var(--primary-fg);
+
+		&:hover {
+			background: var(--primary-hover);
+		}
+
+	}
+
 	.image-select-modal{
+
+		.modal-body {
+			overflow: hidden;
+			display: flex;
+			flex-direction: column;
+		}
+
 		.image{
 			margin: 10px;
 		}
