images <256px (width and height) now rendered at original size; sized to contain instead of cover; non-image files now get an fa-file icon

--- a/file-selector.scss
+++ b/file-selector.scss
@@ -36,7 +36,7 @@
 		img {
 			width: 100%;
 			height: 100%;
-			object-fit: cover;
+			object-fit: contain;
 		}
 	}
 
@@ -50,10 +50,13 @@
 		display: flex;
 		align-items: center;
 		justify-content: center;
+		padding: 10px;
 
-		.image > * {
-			width: 100%;
+		&--auto img {
+			width: auto;
+			height: auto;
 		}
+
 	}
 
 	&__name {
@@ -107,9 +110,6 @@
 			flex-direction: column;
 		}
 
-		.image{
-			margin: 10px;
-		}
 	}
 
 	.image {
