button styling updates

--- a/ManageDiscount/ManageDiscount.scss
+++ b/ManageDiscount/ManageDiscount.scss
@@ -1,4 +1,9 @@
 .coupons-manage-discount {
+
+	.new-coupon-button {
+		text-align: center;
+	}
+
 	.coupons-manage-discount--coupons-loop {
 		margin-top: 1rem;
 		margin-bottom: 1rem;
