#misc - added checker board background to help with transparent images

--- a/MediaCenter/media-center.scss
+++ b/MediaCenter/media-center.scss
@@ -11,7 +11,10 @@
 		}
 	}
 	
-	
+	div.image {
+		background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAAAAACo4kLRAAAAH0lEQVQY02OcxQADZ+AsJgYsYKgIsiD8YTJInEShIAA1NwKQeKc4/QAAAABJRU5ErkJggg==)
+	}
+
 	.table th {
 		border-top: none;
 	}
