--- a/uploader.scss
+++ b/uploader.scss
@@ -1,13 +1,21 @@
 $uploader_width: 256px;
 
 .uploader {
-	$uploader: &;
+    $uploader: &;
 
-	&__internal {
-		width: $uploader_width;
-		aspect-ratio: 1 / 1;
-		position: relative;
-	}
+    &__internal {
+        width: $uploader_width;
+        aspect-ratio: 1 / 1;
+        position: relative;
+    }
+
+    &__imagebackground {
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        background: #f0f0f0;
+        background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAAAAACo4kLRAAAAH0lEQVQY02OcxQADZ+AsJgYsYKgIsiD8YTJInEShIAA1NwKQeKc4/QAAAABJRU5ErkJggg==);
+    }
 
     &__input {
         width: 100% !important;
@@ -17,7 +25,7 @@ $uploader_width: 256px;
         z-index: auto !important;
         cursor: pointer;
     }
-        
+
     &__label {
         position: absolute;
         left: 0;
@@ -54,10 +62,9 @@ $uploader_width: 256px;
         &-internal {
             display: -webkit-box;
             -webkit-line-clamp: 5;
-            -webkit-box-orient: vertical;  
-            overflow: hidden;      
+            -webkit-box-orient: vertical;
+            overflow: hidden;
         }
-
     }
 
     &__icon {
@@ -96,10 +103,9 @@ $uploader_width: 256px;
         &-internal {
             display: -webkit-box;
             -webkit-line-clamp: 5;
-            -webkit-box-orient: vertical;  
-            overflow: hidden;      
+            -webkit-box-orient: vertical;
+            overflow: hidden;
         }
-
     }
 
     &__progress {
@@ -109,18 +115,18 @@ $uploader_width: 256px;
         border: 0;
         left: 0;
         right: 0;
-        bottom: 0;    
+        bottom: 0;
         -webkit-appearance: none;
         appearance: none;
-        width: 100%;  
+        width: 100%;
         height: 8px;
         pointer-events: none;
-            
+
         &::-webkit-progress-bar {
             background-color: rgba(0,0,0, .125);
             border-radius: 0 0 3px 3px;
         }
-            
+
         &::-webkit-progress-value {
             background-color: rgba(0,0,0, .25);
             border-radius: 0 0 3px 3px;
@@ -130,9 +136,8 @@ $uploader_width: 256px;
             background-color: rgba(0,0,0, .25);
             border-radius: 0 0 3px 3px;
         }
-            
     }
-  
+
     &__caption {
         font-size: .75rem;
         text-align: center;
@@ -143,60 +148,63 @@ $uploader_width: 256px;
         text-align: center;
     }
 
-	&--16-9 {
+    &--16-9 {
 
-		#{$uploader}__internal {
-			aspect-ratio: 16 / 9;
-		}
-	}
+        #{$uploader}__internal {
+            aspect-ratio: 16 / 9;
+        }
+    }
 
-	&--4-3 {
+    &--4-3 {
 
-		#{$uploader}__internal {
-			aspect-ratio: 4 / 3;
-		}
-	}
+        #{$uploader}__internal {
+            aspect-ratio: 4 / 3;
+        }
+    }
 
     &--error {
-        
+
         #{$uploader}__label {
             background: var(--danger);
             color: var(--danger-fg);
             border-color: var(--danger-active-border);
         }
-        
         /*
         #{$uploader}__progress {
             display: block;
         }
         */
     }
-    
+
     &--progress {
-        
+
         #{$uploader}__progress {
             display: block;
         }
-
     }
+
 
     &--content {
-        
-        #{$uploader}__label {
-            background-color: #fff;
-        }
 
+        #{$uploader}__label {
+            background-color: #ffffff;
+        }
     }
-    
+
+    &--image {
+
+        #{$uploader}__label {
+            background-color: unset;
+        }
+    }
+
     &--drag-target {
-        
+
         #{$uploader}__label {
             border-width: 4px;
             border-style: dashed;
         }
-
     }
-
 }
 
 @include mq_firefox {
