--- a/uploader.scss
+++ b/uploader.scss
@@ -65,6 +65,15 @@ $uploader_width: 256px;
             -webkit-box-orient: vertical;
             overflow: hidden;
         }
+
+        &.video {
+            padding:0;
+        }
+
+        video {
+            width: 100%;
+            height: 100%;
+        }
     }
 
     &__icon {
