--- a/ManagePrice/ManagePrice.scss
+++ b/ManagePrice/ManagePrice.scss
@@ -1,8 +1,33 @@
-.products-manage-price {
-	// reference an image in the same component folder
-	//background-image: url("./filename.svg");
-	
-	// Style should be mobile first with media queries for larger sizes.
+.manage-price {
+
+	.price-recurring-options {
+		margin-top: 2rem;
+	}
+
+}
+
+.modal-body {
+
+	.manage-price {
+		height: 100%;
+
+		form {
+			height: 100%;
+			display: flex;
+			flex-direction: column;
+
+			> *:nth-child(1) {
+				flex: 1 1 auto;
+				min-height: 0;
+				overflow: auto;
+				margin-bottom: .5rem;
+				margin-right: -1rem;
+				padding-right: 1rem;
+			}
+
+		}
+	}
+
 }
 
 /*
@@ -10,7 +35,7 @@ Size overrides. See bootstrap breakpoints for more information:
 https://getbootstrap.com/docs/5.0/layout/breakpoints/#min-width
 
 @include media-breakpoint-up(md) {
-	.products-manage-price {
+	.manage-price {
 	}
 }
 */
