--- a/ManageProduct/ManageProduct.scss
+++ b/ManageProduct/ManageProduct.scss
@@ -1,16 +1,71 @@
-.products-manage-product {
-	// reference an image in the same component folder
-	//background-image: url("./filename.svg");
-	
-	// Style should be mobile first with media queries for larger sizes.
+.manage-product {
+
+	table {
+		table-layout: fixed;
+
+		th.col--btn {
+			width: 110px;
+		}
+
+		td {
+			vertical-align: middle;
+		}
+
+	}
+
+	&__title {
+		margin-top: 2rem;
+	}
+
+	&__footer {
+		display: flex;
+		align-items: center;
+		justify-content: flex-end;
+
+		.btn {
+			margin-left: .5rem;
+		}
+	}
+
+	.modal {
+
+		.modal-content {
+			height: 100%;
+		}
+
+		.modal-title h5 {
+			margin-bottom: 0;
+		}
+
+		.modal-body {
+			overflow: hidden;
+			height: 100%;
+			max-height: none;
+		}
+
+		.modal__internal-footer {
+			display: flex;
+			align-items: center;
+			justify-content: flex-end;
+			gap: .5rem;
+			flex: 0 0 50px;
+		}
+
+		.modal-footer {
+			display: none;
+		}
+
+	}
+
 }
+
 
 /*
 Size overrides. See bootstrap breakpoints for more information:
 https://getbootstrap.com/docs/5.0/layout/breakpoints/#min-width
 
 @include media-breakpoint-up(md) {
-	.products-manage-product {
+	.manage-product {
 	}
 }
 */
