--- a/ManageProducts.scss
+++ b/ManageProducts.scss
@@ -1,8 +1,27 @@
-.products-manage-products {
-	// reference an image in the same component folder
-	//background-image: url("./filename.svg");
-	
-	// Style should be mobile first with media queries for larger sizes.
+.manage-products {
+
+	table {
+		table-layout: fixed;
+
+		th.col--btn {
+			width: 110px;
+		}
+
+		td {
+			vertical-align: middle;
+		}
+
+	}
+
+	&__footer {
+		display: flex;
+		align-items: center;
+		justify-content: flex-end;
+
+		.btn {
+			margin-left: .5rem;
+		}
+	}
 }
 
 /*
@@ -10,7 +29,7 @@ Size overrides. See bootstrap breakpoints for more information:
 https://getbootstrap.com/docs/5.0/layout/breakpoints/#min-width
 
 @include media-breakpoint-up(md) {
-	.products-manage-products {
+	.manage-products {
 	}
 }
 */
