font_size() mixin renamed to __font_size() to prevent clash with Bootstrap SASS

--- a/buttons.35.scss
+++ b/buttons.35.scss
@@ -27,7 +27,7 @@ input {
         }
 
         ~ .upload-limit {
-            @include font_size(12);
+            @include __font_size(12);
             display: block;
         }
     }
