--- a/Options/options.scss
+++ b/Options/options.scss
@@ -6,6 +6,7 @@
 		align-items: center;
 		justify-content: space-between;
 		padding: 16px 24px;
+		background: var(--huddle-footer-bg, transparent);
 
 		&-left {
 		}
