--- a/StageView/stageview.scss
+++ b/StageView/stageview.scss
@@ -12,7 +12,7 @@
         overflow: visible; // in order for entire 'active speaker' border to be visible
 
 		&-message {
-            color: #fff;
+            color: var(--huddle-stage-fg, #fff);
             margin: 0;
             font-size: 24px;
             font-weight: bold;
