--- a/User/user.scss
+++ b/User/user.scss
@@ -4,7 +4,7 @@
 	&__user {
 		$huddle-chat-user: &;
 
-		background: rgba(255,255,255, .25);
+		background: var(--huddle-user-bg, rgba(255,255,255, .25));
 		position: relative;
 		min-width: 0;
 		min-height: 0;
@@ -26,7 +26,7 @@
 			display: flex;
 			align-items: center;
 			justify-content: flex-end;
-			background: linear-gradient(0, transparent, rgba(0,0,0,.1));
+			background: var(--huddle-user-header-bg, linear-gradient(0, transparent, rgba(0,0,0,.1)));
 			z-index: 20;
 		}
 
@@ -52,7 +52,7 @@
 			//aspect-ratio: 16 / 9;
 
 			+ #{$huddle-chat-user}-footer {
-				background: linear-gradient(0, rgba(0, 0, 0, 0.75) 25%, transparent)
+				background: var(--huddle-user-footer-bg-active, linear-gradient(0, rgba(0, 0, 0, 0.75) 25%, transparent));
 			}
 		}
 
@@ -86,8 +86,8 @@
 			display: flex;
 			align-items: flex-end;
 			justify-content: space-between;
-			background: linear-gradient(0, rgba(0,0,0,.1), transparent);
-			color: #fff;
+			background: var(--huddle-user-footer-bg, linear-gradient(0, rgba(0,0,0,.1), transparent));
+			color: var(--huddle-user-footer-fg, #fff);
 			font-weight: normal;
 			font-size: 12px;
 			z-index: 30;
@@ -96,7 +96,7 @@
 				display: flex;
 				align-items: center;
 				min-width: 0;
-				text-shadow: 2px 2px rgb(0,0,0,.85);
+				text-shadow: var(--huddle-user-text-shadow, 2px 2px rgb(0,0,0,.85));
 			}
 
 			#{$huddle-chat-user}-audio {
@@ -109,7 +109,7 @@
 			transition: all .3s ease;
 
 			.btn-link {
-				border: 1px solid rgba(255,255,255,.5);
+				border: var(--huddle-user-options-border, 1px solid rgba(255,255,255,.5));
 				padding: 0.375rem;
 				opacity: 0;
 				text-decoration: none;
@@ -124,6 +124,9 @@
 				display: none;
 			}
 
+			.dropdown__label i:first-child {
+				margin: 0;
+			}
 		}
 
 		&:hover {
@@ -193,7 +196,7 @@
 		}
 
 		&--gone {
-			background: rgba(255, 255, 255, 0.35);
+			background: var(--huddle-user-gone-bg, rgba(255, 255, 255, 0.35));
 
 			#{$huddle-chat-user}-avatar {
 				opacity: .5;
@@ -207,7 +210,7 @@
 		}
 
 		&--active {
-			box-shadow: 0 0 10px 6px var(--info);
+			box-shadow: var(--huddle-user-active-box-shadow, 0 0 10px 6px var(--info));
 			z-index: 100;
 		}
 
@@ -361,7 +364,7 @@
 			&-options {
 
 				.btn-link {
-					border: 1px solid rgba(255,255,255,.5);
+					border: var(--huddle-user-options-border, 1px solid rgba(255,255,255,.5));
 					padding: 0.375rem;
 					opacity: 1;
 				}
