--- a/BootstrapCarousel.scss
+++ b/BootstrapCarousel.scss
@@ -227,3 +227,42 @@
     color: $carousel-dark-caption-color;
   }
 }
+
+//---------------------
+
+.carousel {
+    min-height: 400px;
+
+    &--no-controls {
+
+        .carousel-indicators {
+            margin-left: 5%;
+            margin-right: 5%;
+        }
+
+        .carousel-caption {
+            left: 5%;
+            right: 5%;
+        }
+
+    }
+}
+
+.carousel-item {
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+
+  &__image {
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+    object-position: center;
+  }
+
+}
+
+.carousel-inner,
+.carousel-item {
+  height: 100%;
+}
