--- a/huddle-chat.scss
+++ b/huddle-chat.scss
@@ -20,6 +20,26 @@ html {
 
 }
 
+.huddle-lobby {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin: 10vh auto;
+    width: 600px;
+    max-width: calc(100vw - 2rem);
+    padding: 5vh 0;
+    box-shadow: var(--shadow-elevation-high);
+
+    &--devices-failed {
+        text-align: center;
+
+        .alert {
+            text-align: left;
+        }
+    }
+}
+
 .huddle-chat {
     $huddle-chat: &;
     height: 100vh;
@@ -261,6 +281,12 @@ html {
 }
 
 @media only screen and (orientation: portrait) and (max-width: 600px) {
+
+    .huddle-lobby {
+        box-shadow: none;
+        margin: 0 auto;
+        padding: 0;
+    }
 
     .huddle-chat {
 
