max video width enforced; video preview can now be optionally disabled

--- a/AvTest/av-test.scss
+++ b/AvTest/av-test.scss
@@ -1,5 +1,5 @@
 .av-test {
-	padding: 1rem 0;
+	padding: 1rem;
 
 	&__title {
 		text-align: center;
@@ -46,6 +46,10 @@
 		&--disabled {
 			opacity: .5;
 		}
+	}
+
+	&__video-sample {
+		width: 100%;
 	}
 	
 }
