--- a/huddle-chat.scss
+++ b/huddle-chat.scss
@@ -1,9 +1,3 @@
-$huddle-chat-header: 4rem;
-$huddle-chat-footer: 5rem;
-$huddle-chat-thumbnail_width: 160px;
-$huddle-chat-thumbnail_height: 90px;
-$huddle-chat-sidebar: 320px;
-
 html {
 
     &.disable-scroll {
@@ -63,7 +57,7 @@ html {
     overflow: hidden;
     display: grid;
     grid-template-columns: minmax(0, 1fr);
-    grid-template-rows: $huddle-chat-header minmax(0, 1fr) $huddle-chat-footer;
+    grid-template-rows: auto minmax(0, 1fr) auto;
     grid-template-areas:
         "header" 
         "main" 
@@ -114,11 +108,18 @@ html {
         
         &-header {
             padding: .5rem;
+            background: var(--huddle-sidebar-header-bg, transparent);
+            color: var(--huddle-sidebar-header-fg, currentColor);
         }
-        
+
         &-heading {
-            font-size: 18px;
+            font-size: var(--huddle-sidebar-header-font-size, 14px);
             margin: 0;
+        }
+
+        &-footer {
+            background: var(--huddle-sidebar-footer-bg, transparent);
+            color: var(--huddle-sidebar-footer-fg, currentColor);
         }
 
         &-body {
@@ -236,7 +237,7 @@ html {
 @media only screen and (orientation: portrait) {
 
     .huddle-chat {
-        grid-template-rows: $huddle-chat-header minmax(0, 1fr) $huddle-chat-footer;
+        grid-template-rows: auto minmax(0, 1fr) auto;
         grid-template-columns: minmax(0, 1fr);
         grid-template-areas:
           "header"
@@ -246,7 +247,7 @@ html {
         &--sidebar,
         &--audience,
         &--conversation {
-            grid-template-rows: $huddle-chat-header minmax(0, 1fr) 208px $huddle-chat-footer;
+            grid-template-rows: auto minmax(0, 1fr) 208px auto;
             grid-template-areas:
               "header"
               "main"
@@ -255,7 +256,7 @@ html {
         }
 
         &--conversation {
-            grid-template-rows: $huddle-chat-header minmax(40vh, 1fr) minmax(0, 1fr) $huddle-chat-footer;
+            grid-template-rows: auto minmax(40vh, 1fr) minmax(0, 1fr) auto;
         }
 
         &__main {
@@ -306,7 +307,7 @@ html {
         &--sidebar,
         &--audience,
         &--conversation {
-            grid-template-rows: $huddle-chat-header minmax(0, 1fr) minmax(200px, calc((((25vw - 1px) / (16/9)) * 3) + 56px))  $huddle-chat-footer;
+            grid-template-rows: auto minmax(0, 1fr) minmax(200px, calc((((25vw - 1px) / (16/9)) * 3) + 56px)) auto;
         }
 
         &__sidebar {
