--- a/huddle-chat.scss
+++ b/huddle-chat.scss
@@ -212,7 +212,7 @@ html {
             border-radius: 50%;
             width: 3rem;
             height: 3rem;
-            border: 0;
+            border-width: 2px;
         }
 
     }
