display name field added to AvTest (WIP); reactions / options can now be optionally hidden; header title now honours colour scheme; header buttons now have a border for clarity; audience / chat sidebar now available during screenshare; look of host leave options improved

--- a/Header/header.scss
+++ b/Header/header.scss
@@ -9,6 +9,10 @@
 	overflow: visible;
 	min-height: $huddle-chat-header;
 
+	h1 {
+		color: var(--huddle-header-fg, #fff);
+	}
+
 	&-info {
 	}
 
@@ -21,6 +25,7 @@
 	&-conversation {
 		background: var(--huddle-header-btn-bg, transparent);
 		color: var(--huddle-header-btn-fg, #fff);
+		border: var(--huddle-header-btn-border, 1px solid #fff);
 
 		&:not(.btn--active):hover {
 			background: var(--huddle-header-btn-bg-hover, #444);
