--- a/AvTest/av-test.scss
+++ b/AvTest/av-test.scss
@@ -42,6 +42,7 @@
 		border: 1px solid #ccc;
 		border-radius: 5px;
 		margin-bottom: .5rem;
+		margin-left: .5rem;
 
 		&--disabled {
 			opacity: .5;
