--- a/huddle-chat.scss
+++ b/huddle-chat.scss
@@ -234,6 +234,12 @@ html {
 
 }
 
+.huddle-chat--not-connected {
+    height: 100vh;
+    display: grid;
+    place-items: center;
+}
+
 @media only screen and (orientation: portrait) {
 
     .huddle-chat {
