hide telligent footer during meeting

--- a/huddle-chat.scss
+++ b/huddle-chat.scss
@@ -12,6 +12,15 @@ html {
 
 	}
 
+    &.huddle-ui--active,
+	&.hide-telligent-footer {
+
+        .footer-fragments {
+            display: none;
+        }
+
+	}
+
 }
 
 .huddle-lobby {
