Add prop to disable A/V toggle buttons for Peer views
Define prop disablePeerControls to disable the mic and webcam buttons
for all Peer views. Show a fullscreen icon on Peer views when
allowFullscreen is true.

(Work item #14192)

--- a/Peer/Peer.scss
+++ b/Peer/Peer.scss
@@ -32,6 +32,12 @@
 				background: rgba(0,0,0, .35);
 			}
 
+			> i {
+				padding: 5px;
+				color: white;
+				font-size: 18px;
+			}
+
 			> .icon {
 				width: 24px;
 				height: 24px;
