--- a/Header/header.scss
+++ b/Header/header.scss
@@ -94,7 +94,7 @@
 			display: flex;
 			align-items: center;
 			padding-left: 4rem;
-			gap: 0.75em;
+			gap: .75em;
 			margin: 0;
 
 			.form-check-input {
@@ -103,6 +103,7 @@
 				margin-left: -3.375em;
 				margin-top: 0;
 			}
+
 		}
 
 		.form-check:not(.form-switch) {
@@ -129,6 +130,37 @@
 		margin: 0;
 	}
 
+}
+
+html.no-flexgap {
+
+	.huddle-chat__header {
+
+		&-controls {
+
+			> * {
+				margin: .25rem;
+
+				&:first-child {
+					margin-inline-start: 0;
+				}
+
+				&:last-child {
+					margin-inline-end: 0;
+				}
+			}
+		}
+
+		&-options {
+
+			.form-check.form-switch {
+
+				.form-check-label {
+					margin-inline-start: .75rem;
+				}
+			}
+		}
+	}
 }
 
 @media (max-width: 700px) {
