--- a/StageView/stageview.scss
+++ b/StageView/stageview.scss
@@ -7,6 +7,7 @@
         padding: 0;
         margin: 0;
         display: grid;
+        grid-gap: 1px;
         gap: 1px;
         //overflow: hidden;
         overflow: visible; // in order for entire 'active speaker' border to be visible
