--- a/ProcessSteps.scss
+++ b/ProcessSteps.scss
@@ -15,6 +15,7 @@
 .process-steps {
     display: grid;
     grid-auto-flow: column;
+    grid-gap: var(--process-steps-gap);
     gap: var(--process-steps-gap);
     padding: 0;
     isolation: isolate; // create a new stacking context
