@clamp_ex mixin fixed

--- a/global.mixins.15.scss
+++ b/global.mixins.15.scss
@@ -53,7 +53,7 @@
 @mixin clamp_ex($property, $min, $val, $max) {
     #{$property}: clamp(#{$min}, #{$val}, #{$max});
     
-    @supports not (clamp(#{$min}, #{$val}, #{$max})) {
+    @supports not (#{$property}: clamp(#{$min}, #{$val}, #{$max})) {
         #{$property}: max(min(#{$val}, #{$max}), #{$min});
     }
     
