--- a/Header/header.scss
+++ b/Header/header.scss
@@ -1,8 +1,24 @@
+:root {
+    --fallback__huddle-header-bg: transparent;
+    --fallback__huddle-header-fg: #fff;
+    --fallback__huddle-header-title-font-family: var(--font);
+    --fallback__huddle-header-title-font-weight: bold;
+    --fallback__huddle-header-title-font-size: 24px;
+    --fallback__huddle-header-description-font-size: 14px;
+    --fallback__huddle-header-btn-bg: transparent;
+    --fallback__huddle-header-btn-fg: #fff;
+    --fallback__huddle-header-btn-border: 1px solid #fff;
+    --fallback__huddle-header-btn-bg-hover: #444;
+    --fallback__huddle-header-btn-fg-hover: #fff;
+    --fallback__huddle-header-btn-bg-active: var(--primary);
+    --fallback__huddle-header-btn-fg-active: var(--primary-fg);
+}
+
 .huddle-chat__header {
 	overflow: hidden;
 	padding: 16px 24px;
-	background: var(--huddle-header-bg, transparent);
-	color: var(--huddle-header-fg, #fff);
+	background: var(--huddle-header-bg, var(--fallback__huddle-header-bg));
+	color: var(--huddle-header-fg, var(--fallback__huddle-header-fg));
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
@@ -10,7 +26,7 @@
 	min-height: $huddle-chat-header;
 
 	h1 {
-		color: var(--huddle-header-fg, #fff);
+		color: var(--huddle-header-fg, var(--fallback__huddle-header-fg));
 	}
 
 	&-info {
@@ -24,18 +40,18 @@
 
 	&-audience,
 	&-conversation {
-		background: var(--huddle-header-btn-bg, transparent);
-		color: var(--huddle-header-btn-fg, #fff);
-		border: var(--huddle-header-btn-border, 1px solid #fff);
+		background: var(--huddle-header-btn-bg, var(--fallback__huddle-header-btn-bg));
+		color: var(--huddle-header-btn-fg, var(--fallback__huddle-header-btn-fg));
+		border: var(--huddle-header-btn-border, var(--fallback__huddle-header-btn-border));
 
 		&:not(.btn--active):hover {
-			background: var(--huddle-header-btn-bg-hover, #444);
-			color: var(--huddle-header-btn-fg-hover, #fff);
+			background: var(--huddle-header-btn-bg-hover, var(--fallback__huddle-header-btn-bg-hover));
+			color: var(--huddle-header-btn-fg-hover, var(--fallback__huddle-header-btn-fg-hover));
 		}
 
 		&.btn--active {
-			background: var(--huddle-header-btn-bg-active, var(--primary));
-			color: var(--huddle-header-btn-fg-active, var(--primary-fg));
+			background: var(--huddle-header-btn-bg-active, var(--fallback__huddle-header-btn-bg-active));
+			color: var(--huddle-header-btn-fg-active, var(--fallback__huddle-header-btn-fg-active));
 		}
 
 	}
@@ -45,13 +61,13 @@
 
 		.dropdown-toggle {
 			text-decoration: none;
-			background: var(--huddle-header-btn-bg, transparent);
-			color: var(--huddle-header-btn-fg, #fff);
-			border: var(--huddle-header-btn-border, 1px solid #fff);
+			background: var(--huddle-header-btn-bg, var(--fallback__huddle-header-btn-bg));
+			color: var(--huddle-header-btn-fg, var(--fallback__huddle-header-btn-fg));
+			border: var(--huddle-header-btn-border, var(--fallback__huddle-header-btn-border));
 
 			&:hover {
-				background: var(--huddle-header-btn-bg-hover, #444);
-				color: var(--huddle-header-btn-fg-hover, #fff);
+				background: var(--huddle-header-btn-bg-hover, var(--fallback__huddle-header-btn-bg-hover));
+				color: var(--huddle-header-btn-fg-hover, var(--fallback__huddle-header-btn-fg-hover));
 			}
 		}
 
@@ -118,14 +134,14 @@
 	}
 
 	&-title {
-		font-family: var(--huddle-header-title-font-family, var(--font));
-		font-weight: var(--huddle-header-title-font-weight, bold);
-		font-size: var(--huddle-header-title-font-size, 24px);
+		font-family: var(--huddle-header-title-font-family, var(--fallback__huddle-header-title-font-family));
+		font-weight: var(--huddle-header-title-font-weight, var(--fallback__huddle-header-title-font-weight));
+		font-size: var(--huddle-header-title-font-size, var(--fallback__huddle-header-title-font-size));
 		margin: 0;
 	}
 
 	&-description {
-		font-size: var(--huddle-header-description-font-size, 14px);
+		font-size: var(--huddle-header-description-font-size, var(--fallback__huddle-header-description-font-size));
 		//font-weight: normal;
 		margin: 0;
 	}
