--- a/Playback/playback.scss
+++ b/Playback/playback.scss
@@ -1,5 +1,23 @@
-$playback_progress_height: 4px;
-$playback_progress_height_hover: 8px;
+:root {
+    --fallback__huddle-playback-bg: linear-gradient(to bottom, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.5));
+    --fallback__huddle-playback-fg: #fff;
+    --fallback__huddle-playback-padding: 8px;
+    --fallback__huddle-playback-progress-height: 4px;
+    --fallback__huddle-playback-progress-height-hover: 8px;
+    --fallback__huddle-playback-progress-bookmark-border: 3px solid #000;
+    --fallback__huddle-playback-progress-bg: var(--secondary);
+    --fallback__huddle-playback-progress-fg: var(--primary);
+    --fallback__huddle-playback-progress-thumb-border-radius: 50%;
+    --fallback__huddle-playback-progress-thumb-size: 16px;
+    --fallback__huddle-playback-seek-tooltip-font-size: 12px;
+    --fallback__huddle-playback-seek-tooltip-font-weight: bold;
+    --fallback__huddle-playback-seek-tooltip-padding: 3px;
+    --fallback__huddle-playback-seek-tooltip-fg: #fff;
+    --fallback__huddle-playback-seek-tooltip-bg: rgba(0, 0, 0, 0.6);
+    --fallback__huddle-playback-volume-range-width: 100px;
+    --fallback__huddle-playback-volume-range-height: 3px;
+    --fallback__huddle-playback-icon-size: 28px;
+}
 
 /*
 .playback-animation {
@@ -7,8 +25,8 @@ $playback_progress_height_hover: 8px;
   position: absolute;
   top: 50%;
   left: 50%;
-  margin-left: -40px;
-  margin-top: -40px;
+  margin-inline-start: -40px;
+  margin-block-start: -40px;
   width: 80px;
   height: 80px;
   border-radius: 80px;
@@ -26,7 +44,8 @@ $playback_progress_height_hover: 8px;
 	&__playback {
     	$huddle-chat__playback: &;
 		transition: all 0.2s ease;
-		background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.5));
+		background-image: var(--huddle-playback-bg, var(--fallback__huddle-playback-bg));
+		padding: var(--huddle-playback-padding, var(--fallback__huddle-playback-padding));
 
 		&--hide {
 			opacity: 0;
@@ -39,23 +58,27 @@ $playback_progress_height_hover: 8px;
 
 		&-progress-wrapper {
             position: relative;
-            height: $playback_progress_height_hover;
-            margin-bottom: 10px;
+            height: var(--huddle-playback-progress-height-hover, var(--fallback__huddle-playback-progress-height-hover));
+            margin-block-end: 10px;
             
             &:hover {
 
+                .progress {
+                    border-radius: calc(var(--huddle-playback-progress-height-hover, var(--fallback__huddle-playback-progress-height-hover)) / 2);
+                }
+
                 .progress,
                 #{$huddle-chat__playback}-progress {
-                    margin-top: 0;
-                    height: $playback_progress_height_hover;
+                    margin-block-start: 0;
+                    height: var(--huddle-playback-progress-height-hover, var(--fallback__huddle-playback-progress-height-hover));
                 }
                 
                 #{$huddle-chat__playback}-seek {
-                    margin-top: 0;
-                    height: $playback_progress_height_hover;
+                    margin-block-start: 0;
+                    height: var(--huddle-playback-progress-height-hover, var(--fallback__huddle-playback-progress-height-hover));
                     
                     &::-moz-range-track {
-                        height: $playback_progress_height_hover;
+                        height: var(--huddle-playback-progress-height-hover, var(--fallback__huddle-playback-progress-height-hover));
                     }
                     
                     &::-webkit-slider-thumb {
@@ -73,21 +96,21 @@ $playback_progress_height_hover: 8px;
 		}
         
         .progress {
-            border-radius: 0;
+            border-radius: calc(var(--huddle-playback-progress-height, var(--fallback__huddle-playback-progress-height)) / 2);
             width: 100%;
-            height: $playback_progress_height;
+            height: var(--huddle-playback-progress-height, var(--fallback__huddle-playback-progress-height));
             pointer-events: none;
             position: absolute;
             top: 0;
-            margin-top: 2px;
+            margin-block-start: 2px;
             transition: all .2s ease;
             
             .progress-bar {
-                border-right: 3px solid #000;
-                background-color: var(--secondary);
+                border-inline-end: var(--huddle-playback-progress-bookmark-border, var(--fallback__huddle-playback-progress-bookmark-border));
+                background-color: var(--huddle-playback-progress-bg, var(--fallback__huddle-playback-progress-bg));
                 
                 &:last-child {
-                    border-right: 0;
+                    border-inline-end: 0;
                 }
 
             }
@@ -100,11 +123,11 @@ $playback_progress_height_hover: 8px;
             appearance: none;
             border-radius: 0;
             width: 100%;
-            height: $playback_progress_height;
+            height: var(--huddle-playback-progress-height, var(--fallback__huddle-playback-progress-height));
             pointer-events: none;
             position: absolute;
             top: 0;
-            margin-top: 2px;
+            margin-block-start: 2px;
             transition: all .2s ease;
             background: transparent;
             border: 0;
@@ -115,26 +138,27 @@ $playback_progress_height_hover: 8px;
             }
             
             &::-webkit-progress-value {
-                background: var(--primary);
+                background: var(--huddle-playback-progress-fg, var(--fallback__huddle-playback-progress-fg));
             }
             
             &::-moz-progress-bar {
-                border: 1px solid var(--primary);
-                background: var(--primary);
+                border: 1px solid var(--huddle-playback-progress-fg, var(--fallback__huddle-playback-progress-fg));
+                background: var(--huddle-playback-progress-fg, var(--fallback__huddle-playback-progress-fg));
             }
         }
 
         &-seek {
+            $playback_seek: &;
             position: absolute;
             top: 0;
             width: 100%;
             cursor: pointer;
             margin: 0;
-            margin-top: 2px;
+            margin-block-start: 2px;
             transition: all .2s ease;
             -webkit-appearance: none;
             -moz-appearance: none;
-            height: $playback_progress_height;
+            height: var(--huddle-playback-progress-height, var(--fallback__huddle-playback-progress-height));
             background: transparent;
             cursor: pointer;
             
@@ -151,17 +175,30 @@ $playback_progress_height_hover: 8px;
             &-tooltip {
                 display: none;
                 position: absolute;
-                top: -50px;
-                margin-left: -20px;
-                font-size: 12px;
-                padding: 3px;
+                top: -28px;
+                margin-inline-start: -20px;
+                font-size: var(--huddle-playback-seek-tooltip-font-size, var(--fallback__huddle-playback-seek-tooltip-font-size));
+                padding: var(--huddle-playback-seek-tooltip-padding, var(--fallback__huddle-playback-seek-tooltip-padding));
                 content: attr(data-title);
-                font-weight: bold;
-                color: #fff;
-                background-color: rgba(0, 0, 0, 0.6);
+                font-weight: var(--huddle-playback-seek-tooltip-font-weight, var(--fallback__huddle-playback-seek-tooltip-font-weight));
+                color: var(--huddle-playback-seek-tooltip-fg, var(--fallback__huddle-playback-seek-tooltip-fg));
+                background-color: var(--huddle-playback-seek-tooltip-bg, var(--fallback__huddle-playback-seek-tooltip-bg));
+                z-index: 100;
+
+                &::after {
+                    content: "";
+                    width: 0;
+                    height: 0;
+                    border-style: solid;
+                    border-width: 4px 4px 0 4px;
+                    border-color: var(--huddle-playback-seek-tooltip-bg, var(--fallback__huddle-playback-seek-tooltip-bg)) transparent transparent transparent;
+                    position: absolute;
+                    left: calc(50% - 4px);
+                    bottom: -4px;
+                }
             }
             
-            &:hover + .seek-tooltip {
+            &:hover + #{$playback_seek}-tooltip {
                 display: block;
             }
 
@@ -187,18 +224,18 @@ $playback_progress_height_hover: 8px;
             }
             
             &::-webkit-slider-thumb {
-                height: 16px;
-                width: 16px;
-                border-radius: 16px;
-                background: var(--primary);
+                height: var(--huddle-playback-progress-thumb-size, var(--fallback__huddle-playback-progress-thumb-size));
+                width: var(--huddle-playback-progress-thumb-size, var(--fallback__huddle-playback-progress-thumb-size));
+                border-radius: var(--huddle-playback-progress-thumb-border-radius, var(--fallback__huddle-playback-progress-thumb-border-radius));
+                background: var(--huddle-playback-progress-fg, var(--fallback__huddle-playback-progress-fg));
                 cursor: pointer;
                 -webkit-appearance: none;
-                margin-left: -1px;
+                margin-inline-start: -1px;
             }
             
             &::-moz-range-track {
                 width: 100%;
-                height: $playback_progress_height;
+                height: var(--huddle-playback-progress-height, var(--fallback__huddle-playback-progress-height));
                 cursor: pointer;
                 border: 1px solid transparent;
                 background: transparent;
@@ -206,13 +243,13 @@ $playback_progress_height_hover: 8px;
             }
             
             &::-moz-range-thumb {
-                height: 14px;
-                width: 14px;
-                border-radius: 50px;
-                border: 1px solid var(--primary);
-                background: var(--primary);
+                height: calc(var(--huddle-playback-progress-thumb-size, var(--fallback__huddle-playback-progress-thumb-size)) - 2px);
+                width: calc(var(--huddle-playback-progress-thumb-size, var(--fallback__huddle-playback-progress-thumb-size)) - 2px);
+                border-radius: var(--huddle-playback-progress-thumb-border-radius, var(--fallback__huddle-playback-progress-thumb-border-radius));
+                border: 1px solid var(--huddle-playback-progress-fg, var(--fallback__huddle-playback-progress-fg));
+                background: var(--huddle-playback-progress-fg, var(--fallback__huddle-playback-progress-fg));
                 cursor: pointer;
-                margin-top: 5px;
+                margin-block-start: 5px;
             }
 
         }
@@ -226,7 +263,7 @@ $playback_progress_height_hover: 8px;
         &-controls {
             display: flex;
             align-items: center;
-            color: #fff;
+            color: var(--huddle-playback-fg, var(--fallback__huddle-playback-fg));
         }
 
         &-play {
@@ -244,20 +281,20 @@ $playback_progress_height_hover: 8px;
             }
 
             &-range {
-                width: 100px;
+                width: var(--huddle-playback-volume-range-width, var(--fallback__huddle-playback-volume-range-width));
                 opacity: 1;
                 transition: all 0.4s ease;
                 -webkit-appearance: none;
                 -moz-appearance: none;
-                height: $playback_progress_height;
+                height: var(--huddle-playback-progress-height, var(--fallback__huddle-playback-progress-height));
                 background: transparent;
                 cursor: pointer;
-                height: 3px;
-                background-color: #fff;
+                height: var(--huddle-playback-volume-range-height, var(--fallback__huddle-playback-volume-range-height));
+                background-color: var(--huddle-playback-fg, var(--fallback__huddle-playback-fg));
 
                 &:focus {
                     outline: none;
-                    width: 100px;
+                    width: var(--huddle-playback-volume-range-width, var(--fallback__huddle-playback-volume-range-width));
                     opacity: 1;
 
                     &::-webkit-slider-runnable-track {
@@ -280,18 +317,18 @@ $playback_progress_height_hover: 8px;
                 }
             
                 &::-webkit-slider-thumb {
-                    border-radius: 16px;
+                    border-radius: var(--huddle-playback-progress-thumb-size, var(--fallback__huddle-playback-progress-thumb-size));
                     cursor: pointer;
                     -webkit-appearance: none;
-                    margin-left: 0;
-                    height: 14px;
-                    width: 14px;
-                    background: #fff;
+                    margin-inline-start: 0;
+                    height: calc(var(--huddle-playback-progress-thumb-size, var(--fallback__huddle-playback-progress-thumb-size)) - 2px);
+                    width: calc(var(--huddle-playback-progress-thumb-size, var(--fallback__huddle-playback-progress-thumb-size)) - 2px);
+                    background: var(--huddle-playback-fg, var(--fallback__huddle-playback-fg));
                 }
 
                 &::-moz-range-track {
                     width: 100%;
-                    height: $playback_progress_height;
+                    height: var(--huddle-playback-progress-height, var(--fallback__huddle-playback-progress-height));
                     cursor: pointer;
                     border: 1px solid transparent;
                     background: transparent;
@@ -299,19 +336,19 @@ $playback_progress_height_hover: 8px;
                 }
             
                 &::-moz-range-thumb {
-                    height: 14px;
-                    width: 14px;
-                    border-radius: 50px;
-                    border: 1px solid #fff;
-                    background: #fff;
+                    height: calc(var(--huddle-playback-progress-thumb-size, var(--fallback__huddle-playback-progress-thumb-size)) - 2px);
+                    width: calc(var(--huddle-playback-progress-thumb-size, var(--fallback__huddle-playback-progress-thumb-size)) - 2px);
+                    border-radius: var(--huddle-playback-progress-thumb-size, var(--fallback__huddle-playback-progress-thumb-size));
+                    border: 1px solid var(--huddle-playback-fg, var(--fallback__huddle-playback-fg));
+                    background: var(--huddle-playback-fg, var(--fallback__huddle-playback-fg));
                     cursor: pointer;
-                    margin-top: 5px;
+                    margin-block-start: 5px;
                 }
 
             }
 
             &:hover #{$huddle-chat__playback-volume}-range {
-                width: 100px;
+                width: var(--huddle-playback-volume-range-width, var(--fallback__huddle-playback-volume-range-width));
                 opacity: 1;
             }
 
@@ -321,7 +358,7 @@ $playback_progress_height_hover: 8px;
         button {
             cursor: pointer;
             position: relative;
-            margin-right: 7px;
+            margin-inline-end: 7px;
             font-size: 12px;
             padding: 3px;
             border: none;
@@ -364,14 +401,22 @@ $playback_progress_height_hover: 8px;
         &-pip {
 
             svg {
-                width: 26px;
-                height: 26px;
+                width: calc(var(--huddle-playback-icon-size, var(--fallback__huddle-playback-icon-size)) - 2px);
+                height: calc(var(--huddle-playback-icon-size, var(--fallback__huddle-playback-icon-size)) - 2px);
             }
 
         }
 
         &-fullscreen {
             margin-inline-end: 0;
+        }
+
+        &-button-icon {
+            width: var(--huddle-playback-icon-size, var(--fallback__huddle-playback-icon-size));
+            height: var(--huddle-playback-icon-size, var(--fallback__huddle-playback-icon-size));
+            fill: var(--huddle-playback-fg, var(--fallback__huddle-playback-fg));
+            stroke: var(--huddle-playback-fg, var(--fallback__huddle-playback-fg));
+            cursor: pointer;
         }
 
         &-icons {
