--- a/User/user.scss
+++ b/User/user.scss
@@ -1,10 +1,21 @@
+:root {
+    --fallback__huddle-user-bg: rgba(255,255,255, .25);
+    --fallback__huddle-user-header-bg: linear-gradient(0, transparent, rgba(0,0,0,.1));
+    --fallback__huddle-user-footer-bg: linear-gradient(0, rgba(0,0,0,.1), transparent);
+    --fallback__huddle-user-footer-bg-active: linear-gradient(0, rgba(0, 0, 0, 0.75) 25%, transparent);
+    --fallback__huddle-user-text-shadow: 2px 2px rgb(0,0,0,.85);
+    --fallback__huddle-user-options-border: 1px solid rgba(255,255,255,.5);
+    --fallback__huddle-user-gone-bg: rgba(255, 255, 255, 0.35);
+    --fallback__huddle-user-active-box-shadow: 0 0 10px 6px var(--info);
+}
+
 .huddle-chat {
 	$huddle-chat: &;
 
 	&__user {
 		$huddle-chat-user: &;
 
-		background: var(--huddle-user-bg, rgba(255,255,255, .25));
+		background: var(--huddle-user-bg, var(--fallback__huddle-user-bg));
 		position: relative;
 		min-width: 0;
 		min-height: 0;
@@ -26,7 +37,7 @@
 			display: flex;
 			align-items: center;
 			justify-content: flex-end;
-			background: var(--huddle-user-header-bg, linear-gradient(0, transparent, rgba(0,0,0,.1)));
+			background: var(--huddle-user-header-bg, var(--fallback__huddle-user-header-bg));
 			z-index: 20;
 		}
 
@@ -52,7 +63,7 @@
 			//aspect-ratio: 16 / 9;
 
 			+ #{$huddle-chat-user}-footer {
-				background: var(--huddle-user-footer-bg-active, linear-gradient(0, rgba(0, 0, 0, 0.75) 25%, transparent));
+				background: var(--huddle-user-footer-bg-active, var(--fallback__huddle-user-footer-bg-active));
 			}
 		}
 
@@ -86,8 +97,8 @@
 			display: flex;
 			align-items: flex-end;
 			justify-content: space-between;
-			background: var(--huddle-user-footer-bg, linear-gradient(0, rgba(0,0,0,.1), transparent));
-			color: var(--huddle-user-footer-fg, #fff);
+			background: var(--huddle-user-footer-bg, var(--fallback__huddle-user-footer-bg));
+			color: var(--huddle-user-footer-fg, var(--fallback__huddle-user-footer-fg));
 			font-weight: normal;
 			font-size: 12px;
 			z-index: 30;
@@ -96,7 +107,7 @@
 				display: flex;
 				align-items: center;
 				min-width: 0;
-				text-shadow: var(--huddle-user-text-shadow, 2px 2px rgb(0,0,0,.85));
+				text-shadow: var(--huddle-user-text-shadow, var(--fallback__huddle-user-text-shadow));
 			}
 
 			#{$huddle-chat-user}-audio {
@@ -109,7 +120,7 @@
 			transition: all .3s ease;
 
 			.btn-link {
-				border: var(--huddle-user-options-border, 1px solid rgba(255,255,255,.5));
+				border: var(--huddle-user-options-border, var(--fallback__huddle-user-options-border));
 				padding: 0.375rem;
 				opacity: 0;
 				text-decoration: none;
@@ -196,7 +207,7 @@
 		}
 
 		&--gone {
-			background: var(--huddle-user-gone-bg, rgba(255, 255, 255, 0.35));
+			background: var(--huddle-user-gone-bg, var(--fallback__huddle-user-gone-bg));
 
 			#{$huddle-chat-user}-avatar {
 				opacity: .5;
@@ -210,7 +221,7 @@
 		}
 
 		&--active {
-			box-shadow: var(--huddle-user-active-box-shadow, 0 0 10px 6px var(--info));
+			box-shadow: var(--huddle-user-active-box-shadow, var(--fallback__huddle-user-active-box-shadow));
 			z-index: 100;
 		}
 
@@ -364,7 +375,7 @@
 			&-options {
 
 				.btn-link {
-					border: var(--huddle-user-options-border, 1px solid rgba(255,255,255,.5));
+					border: var(--huddle-user-options-border, var(--fallback__huddle-user-options-border));
 					padding: 0.375rem;
 					opacity: 1;
 				}
