--- a/huddle-chat.scss
+++ b/huddle-chat.scss
@@ -1,3 +1,16 @@
+:root {
+	--fallback__huddle-bg: rgb(10,10,10);
+	--fallback__huddle-font-family: var(--font);
+	--fallback__huddle-font-weight: var(--bs-body-font-weight);
+    --fallback__huddle-sidebar-bg: #eee;
+    --fallback__huddle-sidebar-header-bg: transparent;
+    --fallback__huddle-sidebar-header-fg: currentColor;
+    --fallback__huddle-sidebar-header-font-size: 14px;
+    --fallback__huddle-sidebar-footer-bg: transparent;
+    --fallback__huddle-sidebar-footer-fg: currentColor;
+    --fallback__huddle-audience-member-bg: #444;
+}
+
 html {
 
     &.disable-scroll {
@@ -60,9 +73,9 @@ html {
     $huddle-chat: &;
     height: 100vh;
     width: 100vw;
-    background: var(--huddle-bg, rgb(10,10,10));
-    font-family: var(--huddle-font-family, var(--font));
-    font-weight: var(--huddle-font-weight, var(--bs-body-font-weight));
+    background: var(--huddle-bg, var(--fallback__huddle-bg));
+    font-family: var(--huddle-font-family, var(--fallback__huddle-font-family));
+    font-weight: var(--huddle-font-weight, var(--fallback__huddle-font-weight));
     overflow: hidden;
     display: grid;
     grid-template-columns: minmax(0, 1fr);
@@ -103,7 +116,7 @@ html {
     &__sidebar {
         $huddle-chat__sidebar: &;
         grid-area: sidebar;
-        background: var(--huddle-sidebar-bg, #eee);
+        background: var(--huddle-sidebar-bg, var(--fallback__huddle-sidebar-bg));
         //display: flex;
         //flex-direction: column;
         //min-height: 0;
@@ -117,18 +130,18 @@ html {
         
         &-header {
             padding: .5rem;
-            background: var(--huddle-sidebar-header-bg, transparent);
-            color: var(--huddle-sidebar-header-fg, currentColor);
+            background: var(--huddle-sidebar-header-bg, var(--fallback__huddle-sidebar-header-bg));
+            color: var(--huddle-sidebar-header-fg, var(--fallback__huddle-sidebar-header-fg));
         }
 
         &-heading {
-            font-size: var(--huddle-sidebar-header-font-size, 14px);
+            font-size: var(--huddle-sidebar-header-font-size, var(--fallback__huddle-sidebar-header-font-size));
             margin: 0;
         }
 
         &-footer {
-            background: var(--huddle-sidebar-footer-bg, transparent);
-            color: var(--huddle-sidebar-footer-fg, currentColor);
+            background: var(--huddle-sidebar-footer-bg, var(--fallback__huddle-sidebar-footer-bg));
+            color: var(--huddle-sidebar-footer-fg, var(--fallback__huddle-sidebar-footer-fg));
         }
 
         &-body {
@@ -152,7 +165,7 @@ html {
 
         &-audience-member {
             //aspect-ratio: 16 / 9;
-            background: var(--huddle-audience-member-bg, #444);
+            background: var(--huddle-audience-member-bg, var(--fallback__huddle-audience-member-bg);
             width: calc((100% - 1px) / 2);
 
             #{$huddle-chat}__user {
