--- a/User/user.scss
+++ b/User/user.scss
@@ -1,6 +1,7 @@
 :root {
     --fallback__huddle-user-bg: rgba(255,255,255, .25);
     --fallback__huddle-user-header-bg: linear-gradient(0, transparent, rgba(0,0,0,.1));
+    --fallback__huddle-user-footer-fg: #fff;
     --fallback__huddle-user-footer-bg: linear-gradient(0, rgba(0,0,0,.1), transparent);
     --fallback__huddle-user-footer-bg-active: linear-gradient(0, rgba(0, 0, 0, 0.75) 25%, transparent);
     --fallback__huddle-user-text-shadow: 2px 2px rgb(0,0,0,.85);
